--- a/style.css
+++ b/style.css
@@ -765,7 +765,13 @@ nav>.githubWrapper>p{
 #quarterCircle2>a>img{
     filter: invert();
     height: 30px;
-    
+
+}
+#projectFilterWrapper{
+    padding: 10px 0px;
+}
+.categoryBtnAllStyle{
+    margin-left: 0px;
 }
 }
     /*-----------------------contact form-----------------------*/
@@ -831,7 +837,7 @@ nav>.githubWrapper>p{
     background: lightGray;
 }
 }
-@media only screen and (max-width: 480px){
+@media only screen and (max-width: 600px){
     #mainWrapper{
     margin-top: 0%;
     background: linear-gradient(90deg, #4aa0ba 50%, #303030 50%);
@@ -919,7 +925,6 @@ nav>.githubWrapper>p{
     justify-content: center;
     align-items: center;
     font-size: 14px;
-
 }
     /*-----------------------personal description/skills-----------------------*/
 
@@ -935,14 +940,12 @@ section{
 #section1-col-1{
     display: flex;
 }
-
 #personalStatementWrapper{
     padding: 0 0px;
     flex: 1;
     text-align: center;
     font-size: 11px;
 }
-
 #quarterCircle2{
     width: 100px;
     height: 100px;
@@ -957,25 +960,13 @@ section{
     flex: 1;
     padding-left: 40px;
 }
-section{
-
-}
-
-#personalStatementWrapper> h1, h3{
-   
-}
-
-
 #skillUlWrapper{
     text-align: center;
-    margin-bottom: 10px
-    
+    margin-bottom: 10px;
 }
 #skillUlWrapper>h3{
-    margin-bottom: 10px
-        
+    margin-bottom: 10px; 
 }
-
 #skillUlWrapper>ul{
     display: inline-block;
     width: 100%;
@@ -1023,8 +1014,6 @@ section{
 #knowledgeOfUlWrapper>h5{
     margin-bottom: 10px;
     
-}
-#knowledgeOfUlWrapper>ul{
 }
 #knowledgeOfUlWrapper>ul>.KnowHeader{ 
     width: 100px;
@@ -1090,41 +1079,17 @@ section{
 /*-----------------------footer-----------------------*/
 
 footer{
-    padding:10px 0;
-    border-bottom: solid 10px #4aa0ba;
-    border-top: none;
-    background: #303030;
-    color: whitesmoke;
     display: flex;
-    align-items: center;
-    margin: auto;
-    text-align: center;
-    font-size: 14px;
+    flex-direction: column;
 }
 footer>ul>li a{
-    color: whitesmoke;
-    text-decoration: underline;
-}
-footer>ul>li a:hover{
-    color: darkgray;
-    text-decoration: none;
-    
-}
-footer>ul{
-    flex: 1;
-      
-    list-style-type: none;
-}
-
-footer>a{
-  
+    display: inline-block;
 }
 
 footer>p{
     flex: 2;
     padding: 20px;
     font-size: 11px;
-
 }
 footer>.githubWrapper{
     transition: 0.2s;
@@ -1132,6 +1097,4 @@ footer>.githubWrapper{
 footer>.githubWrapper:hover{
     transform: translateY(-5px);
 }
-
-
 }
